@@ -31,7 +31,7 @@ aclocal.test alpha.test whoami.test unused.test condman.test \
 texinfo5.test aclocali.test texinfo6.test condman2.test colon4.test \
 java.test sinclude.test javaprim.test javasubst.test aclocalii.test \
 lex2.test libobj8.test version3.test instdata.test exdir2.test \
-colon5.test library.test
+colon5.test library.test syntax.test
 
 EXTRA_DIST = defs $(TESTS)
 
