@@ -1,0 +1,14 @@
+#! /bin/sh
+
+# Test for error for bad syntax.
+
+. $srcdir/defs || exit 1
+
+cat > Makefile.am << 'END'
+foo = q \
+
+lib_LTLIBRARIES = foo.la
+END
+
+$AUTOMAKE && exit 1
+exit 0
