@@ -1,3 +1,7 @@
+Tue May 26 01:44:37 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* syntax.test: New file.
+
 Sun Apr  5 15:26:42 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* version3.test: Increased version number to ensure failure for a
